# Sharing

./: .gitattributes  .gitignore  BUILD_NOTES.txt  README.md  README_ar.md  build.gradle  settings.gradle
.github/: FUNDING.yml
.github/workflows/: push.yml  rb-verify.yml
app/: build.gradle  proguard-rules.pro  version.txt
app/release/: app-release.apk  output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: .c++  blocked.html  index.html  onboarding.html  script.js  style.css  (+1 more)
app/src/main/cpp/: .clangd  CMakeLists.txt  files_exts.c  files_exts.h  generateqr.cpp  qrgenerator.c  utils.c
app/src/main/cpp/qrcodegen/: CMakeLists.txt
app/src/main/jni/: .gitignore  CMakeLists.txt  utils.c
app/src/main/jni/websocket/: frame.c  utils.c
fastlane/android/en-US/: full_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: .gitignore  .parcelrc  README.md  build.gradle  buildweb.py  list_web_files.py  package-lock.json  package.json  pnpm-lock.yaml  translate-html.py  tsconfig.json
web/src/: App.css  App.tsx  consts.ts  i18n.ts  index.html  main.tsx
web/src/common/: contexts.ts  dialog.ts
web/src/scripts/: main.ts
web/src/utils/: utils.ts  utils.tsx
web/strings/ar/: strings.xml
web/strings/en/: strings.xml
web/strings/es/: strings.xml
web/strings/fr/: strings.xml
web/strings/kab/: strings.xml
web/strings/nb-NO/: strings.xml
web/strings/nb-rNO/: strings.xml
web/strings/zh/: strings.xml
web/strings/zh-CN/: strings.xml
(+607 files in other folders)
